// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseURL dns wildcard 1`] = `
{
  "hostname": "*.*.example.com",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL full 1`] = `
{
  "hostname": "*.*.example.com",
  "path": "/example-path/name?foo&bar=baz",
  "pathname": "/example-path/name",
  "port": "80|443",
  "protocol": "https|wss:",
  "search": "?foo&bar=baz",
}
`;

exports[`parseURL hostname 1`] = `
{
  "hostname": "example.com",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL ip 1`] = `
{
  "hostname": "0.0.0.0",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL ip mask 1`] = `
{
  "hostname": "[10.0.0.0/16]",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL ip range 1`] = `
{
  "hostname": "[10.0.0.0-10.1.2.3]",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL ipv6 1`] = `
{
  "hostname": "[2001::1]",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL ipv6 range 1`] = `
{
  "hostname": "[2001::abc-2001::1:ffff]",
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL multiple protocol 1`] = `
{
  "hostname": undefined,
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": "https|wss:",
  "search": undefined,
}
`;

exports[`parseURL pathname 1`] = `
{
  "hostname": undefined,
  "path": "/example-path/name",
  "pathname": "/example-path/name",
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL pathname with route params 1`] = `
{
  "hostname": undefined,
  "path": "/example-path/:param/::longParam",
  "pathname": "/example-path/:param/::longParam",
  "port": undefined,
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL port 1`] = `
{
  "hostname": undefined,
  "path": undefined,
  "pathname": undefined,
  "port": "80|443",
  "protocol": undefined,
  "search": undefined,
}
`;

exports[`parseURL protocol 1`] = `
{
  "hostname": undefined,
  "path": undefined,
  "pathname": undefined,
  "port": undefined,
  "protocol": "https:",
  "search": undefined,
}
`;

exports[`parseURL query 1`] = `
{
  "hostname": undefined,
  "path": "?foo&bar=baz",
  "pathname": undefined,
  "port": undefined,
  "protocol": undefined,
  "search": "?foo&bar=baz",
}
`;
